--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -62,3 +62,21 @@ Lecture 13: Convolutional Neural Networks
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Lg6MZw_OOLI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 Lecture 14: Tree Recursive Neural Networks and Constituency Parsing
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RfwgqPkWZ1w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 15: Coreference Resolution
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rpwEWLaueRk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 16: Dynamic Neural Networks for Question Answering
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/T3octNTE7Is" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 17: Issues in NLP and Possible Architectures for NLP
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/B4v545V3Dq0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+Lecture 18: Tackling the Limits of Deep Learning for NLP
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/JYwNmSe4HqE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
