--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -14,6 +14,15 @@ CS224n: Natural Language Processing with Deep Learning by Christopher Manning at
 
 <br>
 
+Why is NLP hard?
+
+* Complexity in representing, learning and using linguistic/situational/word/visual knowledge
+
+* Human languages are ambiguous (unlike programming and other formal languages)
+
+* Human language interpretation depends on real world, common sense, and contextual knowledge
+
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ERibwqs9p38" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
