--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -28,6 +28,22 @@ Why is NLP hard?
 
 <br>
 
+Main idea of word2vec
+
+Two algorithms
+
+* skip-grams (SG): predict context words given target (position independent)
+
+* Continuous Bag of Words (CBOW): predict target word from bag-of-words context
+
+Two (moderately efficient training methods)
+
+* Hierarchical softmax
+
+* Negative sampling
+
+<br>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ASn7ExxLZws" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
