--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -42,6 +42,8 @@ Two (moderately efficient training methods)
 
 * Negative sampling
 
+$J(\theta) = -\frac{1}{T}$
+
 <br>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ASn7ExxLZws" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
