--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -42,7 +42,7 @@ Two (moderately efficient training methods)
 
 * Negative sampling
 
-$J(\theta) = -\frac{1}{T}\sum_{t=1}^T \sum_{-m \le j \le m, j \neq 0} \log p(w'_{t+j} \mid w_{t})$
+$J(\theta) = -\frac{1}{T}\sum_{t=1}^T \sum_{-m \le j \le m, j \neq 0} \log p(w^{\prime}_{t+j} \mid w_{t})$
 
 $p(o \mid c) = \frac{\exp (u_o^T v_c)}{\sum_{w=1}^V \exp (u_w^T v_c)}$
 
