--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -52,6 +52,16 @@ $p(o \mid c) = \frac{\exp (u_o^T v_c)}{\sum_{w=1}^V \exp (u_w^T v_c)}$
 
 <br>
 
+Negative sampling: train binary logistic regressions for a true pair (center word and word in its context window) versus a couple of noise pairs (the center word paired with a random word)
+
+The skip-gram model with negative sampling
+
+$J(\theta) = \frac{1}{T} \sum_{t=1}^T J_t(\theta)$
+
+$J_t(\theta) = \log \sigma(u_o^Tv_c) + \sum_{j \sim P(\omega)} [\log \sigma(-u_j^Tv_c)]$
+
+<br>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/uc2_iwVqrRI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
