--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -7,7 +7,7 @@ tags:
   - Deep Learning
 ---
 
-CS224n: Natural Language Processing with Deep Learning by Christopher Manning at Stanford University.
+[CS224n: Natural Language Processing with Deep Learning](https://web.stanford.edu/class/archive/cs/cs224n/cs224n.1174/index.html) by Christopher Manning at Stanford University.
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OQQ-W_63UgQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
