--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -62,14 +62,19 @@ $J_t(\theta) = \log \sigma(u_o^Tv_c) + \sum_{j \sim P(\omega)} [\log \sigma(-u_j
 
 GloVe: $J(\theta) = \frac{1}{2} \sum_{i,j=1}^W f(P_{ij})(u_i^Tv_j - \log P_{ij})^2$ Count-based + Direct prediction method
 
-
 <br>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/uc2_iwVqrRI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
 
+If you only have a small training dataset, don't train the word vectors.
 
+If you have a very large dataset, it may work better to train word vectors to the task.
+
+The max-margin loss: $J = \max (0, 1-s+s_c)$
+
+Idea for training objective: make score of true window larger and corrupt window's score lower (until they're good enough)
 
 <br>
 
