--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -82,6 +82,10 @@ Idea for training objective: make score of true window larger and corrupt window
 
 <br>
 
+Chain rule
+
+<br>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/PVShkZgXznc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
