--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -94,6 +94,10 @@ Chain rule
 
 <br>
 
+TensorFlow = Tensor + Flow
+
+<br>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Keqep_PKrY8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
