--- a/_posts/2019-01-24-blog-post-5.md
+++ b/_posts/2019-01-24-blog-post-5.md
@@ -7,8 +7,11 @@ tags:
   - 算法
 ---
 
+[计算导论与C语言基础](https://www.coursera.org/learn/jisuanji-biancheng) by Peking University on Coursera.
 
-
+<div  align="center">
+<img src='/images/C_1.png'>
+</div>
 
 
 
