--- a/_posts/2019-01-24-blog-post-5.md
+++ b/_posts/2019-01-24-blog-post-5.md
@@ -13,5 +13,11 @@ tags:
 <img src='/images/C_1.png'>
 </div>
 
+[C程序设计进阶](https://www.coursera.org/learn/c-chengxu-sheji) by Peking University on Coursera.
+
+<div  align="center">
+<img src='/images/C_2.png'>
+</div>
+
 
 
