--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -9,5 +9,4 @@ tags:
 
 [COMS W4995 Applied Machine Learning](https://www.cs.columbia.edu/~amueller/comsw4995s19/) by Andreas C. Müller at Columbia University.
 
-
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Qd68h4UGlNY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
