--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -8,4 +8,66 @@ tags:
 
 [COMS W4995 Applied Machine Learning](https://www.cs.columbia.edu/~amueller/comsw4995s19/) by Andreas C. Müller at Columbia University.
 
+01/23/19	Introduction
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Qd68h4UGlNY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+
+01/28/19	git, GitHub and testing
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EPVwnG-n4B0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+
+01/30/19	matplotlib and visualization
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/O2zXpQmij_c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+
+02/04/19	Introduction to supervised learning
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MEEWqrJEtTg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+
+02/06/19	Preprocessing
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9rBc3rTsJsY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+
+02/11/19	Linear models for Regression
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3cZ_ScHonsI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+
+02/13/19	Linear models for Classification, SVMs
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MRfLSgJyfpQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+
+02/18/19	Trees, Forests & Ensembles
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_FBgcCbAvig" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
