--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -24,6 +24,21 @@ Conda is a packaging tool and installer that aims to do more than what pip does;
 
 <br>
 
+| Usage | Git command  |
+| --------   | ------------- | 
+| Changes between working directory and what was last staged | git diff |
+| Changes between staging area and last commit | git diff --staged |
+| Current Version (most recent commit) | HEAD |
+| Version before current | HEAD~1 |
+| Changes made in the last commit | git diff HEAD~1 |
+| Changes made in the last 2 commits | git diff HEAD~2 |
+| | git log --online --decorate --all --graph |
+| moves HEAD to <commit> (takes the current branch with it) | git reset --soft <commit> |
+| moves HEAD to <commit>, changes index to be at <commit> (but not working directory) | git reset --mixed <commit> |
+| moved HEAD to <commit>, changes index and working tree to <commit> | git reset --hard <commit> |
+
+
+
 <br>
 
 01/30/19	matplotlib and visualization
