--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -37,6 +37,12 @@ Conda is a packaging tool and installer that aims to do more than what pip does;
 | moves HEAD to <commit>, changes index to be at <commit> (but not working directory) | git reset --mixed <commit> |
 | moved HEAD to <commit>, changes index and working tree to <commit> | git reset --hard <commit> |
 
+Unit tests – function does the right thing.
+
+Integration tests – system / process does the right thing.
+
+Non-regression tests – bug got removed (and will not be reintroduced).
+
 
 
 <br>
