--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -43,8 +43,6 @@ Integration tests – system / process does the right thing.
 
 Non-regression tests – bug got removed (and will not be reintroduced).
 
-
-
 <br>
 
 01/30/19	matplotlib and visualization
@@ -52,6 +50,12 @@ Non-regression tests – bug got removed (and will not be reintroduced).
 <iframe width="560" height="315" src="https://www.youtube.com/embed/O2zXpQmij_c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
+
+`import matplotlib.pyplot as plt`
+
+`ax = plt.gca() # get current axes`
+
+`fig = plt.gcf() # get current figure`
 
 <br>
 
