--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -65,6 +65,17 @@ Non-regression tests – bug got removed (and will not be reintroduced).
 
 <br>
 
+| Naive Nearest Neighbor | Kd-tree Nearest Neighbor |
+| --------   | ------------- | 
+| fit: no time | fit: O(p * n log n) |
+| memory: O(n * p) | memory: O(n * p) |
+| predict: O(n * p) | predict: O(k * log(n)) FOR FIXED p! |
+| n=n_samples | p=n_features |
+
+Parametric model: Number of “parameters” (degrees of freedom) independent of data.
+
+Non-parametric model: Degrees of freedom increase with more data.
+
 <br>
 
 02/06/19	Preprocessing
