--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -84,6 +84,24 @@ Non-parametric model: Degrees of freedom increase with more data.
 
 <br>
 
+`est.fit_transform(X) == est.fit(X).transform(X) # mostly`
+
+`est.fit_predict(X) == est.fit(X).predict(X) # mostly`
+
+For high cardinality categorical features, we can use target-based encoding.
+
+Power Transformation:
+
+\begin{equation}
+bc_{\lambda}(x) =
+\begin{cases} 
+\frac{x^{\lambda}-1}{\lambda},  & \mbox{if }\lambda \neq 0 \newline
+\log(x), & \mbox{if }\lambda = 0
+\end{cases}
+\end{equation}
+
+Only applicable for positive x!
+
 <br>
 
 02/11/19	Linear models for Regression
