--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -110,7 +110,12 @@ Only applicable for positive x!
 
 <br>
 
+Imputation Methods:
 
+1. Mean/Median
+2. kNN
+3. Regression models
+4. Matrix factorization
 
 <br>
 
