--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -117,6 +117,26 @@ Imputation Methods:
 3. Regression models
 4. Matrix factorization
 
+Coefficient of determination $R^2$:
+
+$R^2(y, y') = 1 - \frac{\sum_{i=0}^{n-1}(y_i-y'_i)^2}{\sum_{i=0}^{n-1}(y_i-\bar{y})^2}$
+
+$\bar{y} = \frac{1}{n}\sum_{i=0}^{n-1}y_i$
+
+Can be negative for biased estimators - or the test set!
+
+Ridge Regression:
+
+$\min_{w \in \mathbb{R}^p, b \in \mathbb{R}} \sum_{i=1}^n \|w^Tx_{i} + b - y_i\|^2 + \alpha_2\|w\|_2^2$
+
+Lasso Regression:
+
+$\min_{w \in \mathbb{R}^p, b \in \mathbb{R}} \sum_{i=1}^n \|w^Tx_{i} + b - y_i\|^2 + \alpha_1\|w\|_1$
+
+Elastic Net:
+
+$\min_{w \in \mathbb{R}^p, b \in \mathbb{R}} \sum_{i=1}^n \|w^Tx_{i} + b - y_i\|^2 + \alpha_1\|w\|_1 + \alpha_2\|w\|_2^2$
+
 <br>
 
 02/13/19	Linear models for Classification, SVMs
