--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -119,7 +119,9 @@ Imputation Methods:
 
 Coefficient of determination $R^2$:
 
-$R^2(y, y') = 1 - \frac{\sum_{i=0}^{n-1}(y_i-y'_i)^2}{\sum_{i=0}^{n-1}(y_i-\bar{y})^2}$
+\begin{equation}
+R^2(y, y') = 1 - \frac{\sum_{i=0}^{n-1}(y_i-y'_i)^2}{\sum_{i=0}^{n-1}(y_i-\bar{y})^2}
+\end{equation}
 
 $\bar{y} = \frac{1}{n}\sum_{i=0}^{n-1}y_i$
 
