--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -145,6 +145,34 @@ $\min_{w \in \mathbb{R}^p, b \in \mathbb{R}} \sum_{i=1}^n \|w^Tx_{i} + b - y_i\|
 
 <br>
 
+Logistic Regression:
+
+$\min_{w \in \mathbb{R}^p, b \in \mathbb{R}} -\sum_{i=1}^n \log(\exp(-y_i(w^Tx_i+b))+1)$
+
+Penalized Logistic Regression:
+
+$\min_{w \in \mathbb{R}^p, b \in \mathbb{R}} -C\sum_{i=1}^n \log(\exp(-y_i(w^Tx_i+b))+1) + \|w\|_2^2$
+
+$\min_{w \in \mathbb{R}^p, b \in \mathbb{R}} -C\sum_{i=1}^n \log(\exp(-y_i(w^Tx_i+b))+1) + \|w\|_1$
+
+(Soft Margin) Linear SVM
+
+$\min_{w \in \mathbb{R}^p, b \in \mathbb{R}} C\sum_{i=1}^n \max(0, 1-y_i(w^Tx_i+b)) + \|w\|_2^2$
+
+$\min_{w \in \mathbb{R}^p, b \in \mathbb{R}} C\sum_{i=1}^n \max(0, 1-y_i(w^Tx_i+b)) + \|w\|_1$
+
+| One vs Rest | One vs One |
+| --- | --- |
+| nclasses classifiers | nclasses*(nclasses-1)/2 classifiers | 
+| trained on imbalanced datasets of original size | trained on balanced subsets |
+| retains some uncertainty | No uncertainty propagated |
+
+Multinomial Logistic Regression
+
+$\min_{w \in \mathbb{R}^p, b \in \mathbb{R}} -\sum_{i=1}^n \log(p(y=y_i|x_i, w, b))$
+
+$p(y=i|x) = \frac{e^{w^T_ix+b_i}}{\sum_{j=1}^ne^{w^T_jx+b_j}}$
+
 <br>
 
 02/18/19	Trees, Forests & Ensembles
