--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -183,3 +183,20 @@ $p(y=i \mid x) = \frac{e^{w^T_ix+b_i}}{\sum_{j=1}^ne^{w^T_jx+b_j}}$
 <br>
 
 <br>
+
+02/20/19	Gradient Boosting, Calibration
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OC3qmxGh2gc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+
+02/25/19	Model Evaluation
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EUiIydNBIbE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+
