--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -183,6 +183,24 @@ Kernel SVM: Read the book!
 
 <br>
 
+Trees are similar to Nearest Neighbors.
+
+Trees and Nearest Neighbors can not extrapolate.
+
+Trees are not stable.
+
+Bagging (Bootstrap AGGregation): Generic way to build "slightly different" models.
+
+Generalization in Ensembles depend on strength of the individual classifiers and (inversely) on their correlation; Uncorrelating them might help, even at the expense of strength.
+
+Randomize in two ways in Random Forest:
+
+1. For each tree: pick bootstrap sample of data
+
+2. For each split: pick random sample of features
+
+
+
 <br>
 
 02/20/19	Gradient Boosting, Calibration
