--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -119,7 +119,7 @@ Imputation Methods:
 
 Coefficient of determination $R^2$:
 
-$R^2 (y, y^{*}) = 1 - \sum_{i=0}^{n-1}(y_i-y^{*}_i)^2 / \sum_{i=0}^{n-1}(y_i-\bar{y})^2$
+$R^2 (y, y')$ = $1 - \sum_{i=0}^{n-1}(y_i-y'_i)^2 / \sum_{i=0}^{n-1}(y_i-\bar{y})^2$
 
 $\bar{y} = \frac{1}{n}\sum_{i=0}^{n-1}y_i$
 
@@ -198,8 +198,6 @@ Randomize in two ways in Random Forest:
 1. For each tree: pick bootstrap sample of data
 
 2. For each split: pick random sample of features
-
-
 
 <br>
 
