--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -119,7 +119,7 @@ Imputation Methods:
 
 Coefficient of determination $R^2$:
 
-$R^2 (y, y') = 1$ - $\sum_{i=0}^{n-1}(y_i-y'_i)^2$ / $\sum_{i=0}^{n-1}(y_i-\bar{y})^2$
+$R^2 (y, y') = 1 - \sum_{i=0}^{n-1}(y_i-y'_i)^2 / \sum_{i=0}^{n-1}(y_i-\bar{y})^2$
 
 $\bar{y} = \frac{1}{n}\sum_{i=0}^{n-1}y_i$
 
@@ -206,6 +206,26 @@ Randomize in two ways in Random Forest:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OC3qmxGh2gc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
+
+Gradient Boosting Algorithm:
+
+$f_1(x) \approx y$
+
+$f_2(x) \approx y - \alpha f_1(x)$
+
+$f_3(x) \approx y - \alpha f_1(x) - \alpha f_2(x)$
+
+Gradient Boosting Advantages:
+
+1. slower to train than RF, but much faster to predict
+
+2. very fast using XGBoost, LightGBM ......
+
+3. small model size
+
+4. usually more accurate than Random Forests
+
+
 
 <br>
 
