--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -211,21 +211,49 @@ Gradient Boosting Algorithm:
 
 $f_1(x) \approx y$
 
-$f_2(x) \approx y - \alpha f_1(x)$
+$f_2(x) \approx y - \gamma f_1(x)$
 
-$f_3(x) \approx y - \alpha f_1(x) - \alpha f_2(x)$
+$f_3(x) \approx y - \gamma f_1(x) - \gamma f_2(x)$
+
+Learning rate: $\gamma$
 
 Gradient Boosting Advantages:
 
 1. slower to train than RF, but much faster to predict
 
-2. very fast using XGBoost, LightGBM ......
+2. very fast using XGBoost, LightGBM, pygbm ......
 
 3. small model size
 
 4. usually more accurate than Random Forests
 
+When to use tree-based models:
 
+1. Model non-linear relationships
+
+2. Doesn't care about scaling, no need for feature engineering
+
+3. Single tree: very interpretable (if small)
+
+4. Random forests very robust, good benchmark
+
+5. Gradeint boosting often best performance with careful tuning
+
+Calibration curve
+
+Brier Score (for binary classification): "mean squared error of probability estimate"
+
+$BS = \sum_{i=1}^n (p(y_i)-y_i)^2 / n$ (measure both calibration and accuracy)
+
+Calibrating a classifier:
+
+1. Platt Scaling
+
+$f_{platt} = \frac{1}{1+\exp(-ws(x)-b)}$
+
+2. Isotonic Regression
+
+Learn monotonically increasing step function in 1d.
 
 <br>
 
@@ -237,3 +265,10 @@ Gradient Boosting Advantages:
 
 <br>
 
+03/04/19	Learning with Imbalanced Data
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Eix70D-H5ag" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
