--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -247,13 +247,9 @@ $BS = \sum_{i=1}^n (p(y_i)-y_i)^2 / n$ (measure both calibration and accuracy)
 
 Calibrating a classifier:
 
-1. Platt Scaling
+1. Platt Scaling: $f_{platt} = \frac{1}{1+\exp(-ws(x)-b)}$
 
-$f_{platt} = \frac{1}{1+\exp(-ws(x)-b)}$
-
-2. Isotonic Regression
-
-Learn monotonically increasing step function in 1d.
+2. Isotonic Regression: Learn monotonically increasing step function in 1d.
 
 <br>
 
