--- a/_posts/2019-02-20-blog-post-1.md
+++ b/_posts/2019-02-20-blog-post-1.md
@@ -259,11 +259,49 @@ Calibrating a classifier:
 
 <br>
 
+confusion matrix:
+
+|  |  |  |
+| --- | --- | --- | 
+| negative class | TN | FP |
+| positive class | FN | TP |
+|  | predicted negative | predicted positive |
+
+$Accuracy = \frac{TP+TN}{TP+TN+FP+FN}$
+
+$Precision = \frac{TP}{TP+FP}$
+
+$Recall = \frac{TP}{TP+FN}$
+
+$F = 2\frac{precision \times recall}{precision+recall}$
+
+Precision-Recall curve: (x-axis Recall; y-axis Precision)
+
+Average Precision:
+
+$AveP = \sum_{k=1}^n P(k)\triangle r(k)$
+
+$FPR = \frac{FP}{FP+TN}$
+
+$TPR = \frac{TP}{TP+FN}$
+
+ROC curve: (x-axis FPR; y-axis TPR)
+
+ROC AUC: Area under ROC Curve (Always 0.5 for random/constant prediction)
+
 <br>
 
 03/04/19	Learning with Imbalanced Data
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Eix70D-H5ag" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br>
+
+<br>
+
+03/06/19	Model Interpretration and Feature Selection
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EQQ5YQibXOI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
 
