--- a/_posts/2018-10-15-blog-post-1.md
+++ b/_posts/2018-10-15-blog-post-1.md
@@ -8,7 +8,7 @@ tags:
 
 [CS231n: Convolutional Neural Networks for Visual Recognition](http://cs231n.stanford.edu/) by Fei-Fei Li at Stanford University.
 
-Lecture 1 | Introduction to Convolutional Neural Networks for Visual Recognition
+Lecture 1 Introduction to Convolutional Neural Networks for Visual Recognition
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/vT1JzLTH4G4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -16,7 +16,7 @@ Lecture 1 | Introduction to Convolutional Neural Networks for Visual Recognition
 
 <br>
 
-Lecture 2 | Image Classification
+Lecture 2 Image Classification
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OoUX-nOEjG0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -24,7 +24,7 @@ Lecture 2 | Image Classification
 
 <br>
 
-Lecture 3 | Loss Functions and Optimization
+Lecture 3 Loss Functions and Optimization
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/h7iBpEHGVNc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -32,7 +32,7 @@ Lecture 3 | Loss Functions and Optimization
 
 <br>
 
-Lecture 4 | Introduction to Neural Networks
+Lecture 4 Introduction to Neural Networks
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/d14TUNcbn1k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -40,7 +40,7 @@ Lecture 4 | Introduction to Neural Networks
 
 <br>
 
-Lecture 5 | Convolutional Neural Networks
+Lecture 5 Convolutional Neural Networks
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bNb2fEVKeEo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -48,7 +48,7 @@ Lecture 5 | Convolutional Neural Networks
 
 <br>
 
-Lecture 6 | Training Neural Networks I
+Lecture 6 Training Neural Networks I
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/wEoyxE0GP2M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -56,7 +56,7 @@ Lecture 6 | Training Neural Networks I
 
 <br>
 
-Lecture 7 | Training Neural Networks II
+Lecture 7 Training Neural Networks II
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/_JB0AO7QxSA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -64,7 +64,7 @@ Lecture 7 | Training Neural Networks II
 
 <br>
 
-Lecture 8 | Deep Learning Software
+Lecture 8 Deep Learning Software
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/6SlgtELqOWc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -72,7 +72,7 @@ Lecture 8 | Deep Learning Software
 
 <br>
 
-Lecture 9 | CNN Architectures
+Lecture 9 CNN Architectures
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/DAOcjicFr1Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -80,7 +80,7 @@ Lecture 9 | CNN Architectures
 
 <br>
 
-Lecture 10 | Recurrent Neural Networks
+Lecture 10 Recurrent Neural Networks
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/6niqTuYFZLQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -88,7 +88,7 @@ Lecture 10 | Recurrent Neural Networks
 
 <br>
 
-Lecture 11 | Detection and Segmentation
+Lecture 11 Detection and Segmentation
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/nDPWywWRIRo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -96,7 +96,7 @@ Lecture 11 | Detection and Segmentation
 
 <br>
 
-Lecture 12 | Visualizing and Understanding
+Lecture 12 Visualizing and Understanding
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/6wcs6szJWMY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -104,7 +104,7 @@ Lecture 12 | Visualizing and Understanding
 
 <br>
 
-Lecture 13 | Generative Models
+Lecture 13 Generative Models
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5WoItGTWV54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -112,7 +112,7 @@ Lecture 13 | Generative Models
 
 <br>
 
-Lecture 14 | Deep Reinforcement Learning
+Lecture 14 Deep Reinforcement Learning
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lvoHnicueoE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -120,7 +120,7 @@ Lecture 14 | Deep Reinforcement Learning
 
 <br>
 
-Lecture 15 | Efficient Methods and Hardware for Deep Learning
+Lecture 15 Efficient Methods and Hardware for Deep Learning
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/eZdOkDtYMoo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -128,7 +128,7 @@ Lecture 15 | Efficient Methods and Hardware for Deep Learning
 
 <br>
 
-Lecture 16 | Adversarial Examples and Adversarial Training
+Lecture 16 Adversarial Examples and Adversarial Training
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/CIfsB_EYsVI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
