--- a/_posts/2019-01-21-blog-post-4.md
+++ b/_posts/2019-01-21-blog-post-4.md
@@ -82,7 +82,7 @@ Idea for training objective: make score of true window larger and corrupt window
 
 <br>
 
-Chain rule
+Chain rule, Nothing fancy!
 
 <br>
 
