--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -9,6 +9,8 @@ tags:
 
 [CS 20: Tensorflow for Deep Learning Research](http://web.stanford.edu/class/cs20si/index.html) by Chip Huyen at Stanford University.
 
+## Overview of Tensorflow
+
 To put part of a graph on a specific CPU or GPU:
 
 <pre>
@@ -52,3 +54,6 @@ with g1.as_default():
 with g2.as_default():
 	b = tf.Constant(5)
 </pre>
+
+## Operations
+
