--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -52,3 +52,88 @@ Multiple graphs
 
 ## Operations
 
+Visualize with TensorBoard
+
+    import tensorflow as tf
+
+    a = tf.constant(2)
+    b = tf.constant(3)
+    x = tf.add(a, b)
+
+    writer = tf.summary.FileWriter('./graphs', tf.get_default_graph())
+    with tf.Session() as sess:
+	    # writer = tf.summary.FileWriter('./graphs', sess.graph) 
+	    print(sess.run(x))
+    writer.close() # close the writer when you’re done using it
+    
+Run TensorBoard
+
+    $ python3 [yourprogram].py
+    $ tensorboard --logdir="./graphs" --port 6006
+    
+Variables
+
+    s = tf.get_variable("scalar", initializer=tf.constant(2)) 
+    m = tf.get_variable("matrix", initializer=tf.constant([[0, 1], [2, 3]]))
+    W = tf.get_variable("big_matrix", shape=(784, 10), initializer=tf.zeros_initializer())
+    
+Initialize variables
+
+    # The easiest way is initializing all variables at once:
+    with tf.Session() as sess:
+	    sess.run(tf.global_variables_initializer())
+
+    # Initialize only a subset of variables:
+    with tf.Session() as sess:
+	    sess.run(tf.variables_initializer([a, b]))
+
+    # Initialize a single variable
+    W = tf.Variable(tf.zeros([784,10]))
+    with tf.Session() as sess:
+	    sess.run(W.initializer)
+	    
+Each session maintains its own copy of variables
+
+    W = tf.Variable(10)
+
+    sess1 = tf.Session()
+    sess2 = tf.Session()
+
+    sess1.run(W.initializer)
+    sess2.run(W.initializer)
+
+    print(sess1.run(W.assign_add(10))) 	# >> 20
+    print(sess2.run(W.assign_sub(2)))  # >> 8
+
+    print(sess1.run(W.assign_add(100))) # >> 120
+    print(sess2.run(W.assign_sub(50)))  # >> -42
+
+    sess1.close()
+    sess2.close()
+
+Placeholders
+
+    # create a placeholder for a vector of 3 elements, type tf.float32
+    a = tf.placeholder(tf.float32, shape=[3])
+    
+    b = tf.constant([5, 5, 5], tf.float32)
+
+    # use the placeholder as you would a constant or a variable
+    c = a + b  # short for tf.add(a, b)
+
+    with tf.Session() as sess:
+	    print(sess.run(c, feed_dict={a: [1, 2, 3]}))
+
+    # >> [6, 7, 8]
+    
+VERY BAD Lazy loading Example
+
+    x = tf.Variable(10, name='x')
+    y = tf.Variable(20, name='y')
+
+    writer = tf.summary.FileWriter('./graphs/normal_loading', tf.get_default_graph())
+    with tf.Session() as sess:
+	    sess.run(tf.global_variables_initializer())
+	    for _ in range(10):
+		    sess.run(tf.add(x, y)) # someone decides to be clever to save one line of code
+    writer.close()
