--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -137,3 +137,20 @@ VERY BAD Lazy loading Example
 	    for _ in range(10):
 		    sess.run(tf.add(x, y)) # someone decides to be clever to save one line of code
     writer.close()
+
+
+## Linear and Logistic Regression
+
+Implementing Huber loss
+
+$L_{\delta}(y, f(x)) =
+\begin{cases} 
+\frac{1}{2}(y-f(x))^2,  & \mbox{for } |y-f(x)|\le \delta, \\
+\delta |y-f(x)| - \frac{1}{2}\delta^2, & \mbox{otherwise}.
+\end{cases}$
+
+    def huber_loss(labels, predictions, delta=14.0):
+        residual = tf.abs(labels - predictions)
+        def f1(): return 0.5 * tf.square(residual)
+        def f2(): return delta * residual - 0.5 * tf.square(delta)
+        return tf.cond(residual < delta, f1, f2)
