--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -145,7 +145,7 @@ Implementing Huber loss
 
 $L_{\delta}(y, f(x)) =
 \begin{cases} 
-\frac{1}{2}(y-f(x))^2,  & \mbox{for } |y-f(x)|\le \delta, \\
+\frac{1}{2}(y-f(x))^2,  & \mbox{for } |y-f(x)|\le \delta, \newline
 \delta |y-f(x)| - \frac{1}{2}\delta^2, & \mbox{otherwise}.
 \end{cases}$
 
