--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -154,3 +154,117 @@ $L_{\delta}(y, f(x)) =
         def f1(): return 0.5 * tf.square(residual)
         def f2(): return delta * residual - 0.5 * tf.square(delta)
         return tf.cond(residual < delta, f1, f2)
+        
+tf.data.Dataset
+
+    tf.data.Dataset.from_tensor_slices((features, labels))
+    dataset = tf.data.Dataset.from_tensor_slices((data[:,0], data[:,1]))
+    
+    print(dataset.output_types)    # >> (tf.float32, tf.float32)
+    print(dataset.output_shapes)   # >> (TensorShape([]), TensorShape([]))
+    
+Create Dataset from files
+
+    tf.data.TextLineDataset(filenames)
+    tf.data.FixedLengthRecordDataset(filenames)
+    tf.data.TFRecordDataset(filenames)
+    
+tf.data.Iterator
+
+    iterator = dataset.make_one_shot_iterator()
+    X, Y = iterator.get_next()         # X is the birth rate, Y is the life expectancy
+    
+    with tf.Session() as sess:
+	    print(sess.run([X, Y]))		# >> [1.822, 74.82825]
+	    print(sess.run([X, Y]))		# >> [3.869, 70.81949]
+	    print(sess.run([X, Y]))		# >> [3.911, 72.15066]
+	    
+	 
+	    
+    iterator = dataset.make_initializable_iterator()
+    ...
+    for i in range(100): 
+        sess.run(iterator.initializer) 
+        total_loss = 0
+        try:
+            while True:
+                sess.run([optimizer]) 
+        except tf.errors.OutOfRangeError:
+            pass
+            
+
+## Eager execution
+
+Boilerplate
+
+    x = tf.placeholder(tf.float32, shape=[1, 1])
+    m = tf.matmul(x, x)
+
+    print(m)
+    # Tensor("MatMul:0", shape=(1, 1), dtype=float32)
+
+    with tf.Session() as sess:
+      m_out = sess.run(m, feed_dict={x: [[2.]]})
+    print(m_out)
+    # [[4.]]
+    
+    ##########
+    
+    x = [[2.]]  # No need for placeholders!
+    m = tf.matmul(x, x)
+
+    print(m)  # No sessions!
+    # tf.Tensor([[4.]], shape=(1, 1), dtype=float32)
+    
+Lazy Loading
+
+    x = tf.random_uniform([2, 2])
+
+    with tf.Session() as sess:
+      for i in range(x.shape[0]):
+        for j in range(x.shape[1]):
+          print(sess.run(x[i, j]))
+          
+    ##########
+    
+    x = tf.random_uniform([2, 2])
+
+    for i in range(x.shape[0]):
+      for j in range(x.shape[1]):
+        print(x[i, j])
+        
+Tensors Act Like NumPy Arrays
+
+    x = tf.constant([1.0, 2.0, 3.0])
+
+    # Tensors are backed by NumPy arrays
+    assert type(x.numpy()) == np.ndarray
+    squared = np.square(x) # Tensors are compatible with NumPy functions
+ 
+    # Tensors are iterable!
+    for i in x:
+      print(i)
+      
+Gradients
+
+    def square(x):
+      return x ** 2
+
+    grad = tfe.gradients_function(square)
+
+    print(square(3.))    # tf.Tensor(9., shape=(), dtype=float32)
+    print(grad(3.))      # [tf.Tensor(6., shape=(), dtype=float32)]
+    
+    
+    x = tfe.Variable(2.0)
+    def loss(y):
+      return (y - x ** 2) ** 2
+
+    grad = tfe.implicit_gradients(loss)
+
+    print(loss(7.))  # tf.Tensor(9., shape=(), dtype=float32)
+    print(grad(7.))  # [(<tf.Tensor: -24.0, shape=(), dtype=float32>, <tf.Variable 'Variable:0', shape=() dtype=float32, numpy=2.0>)]
+    
+  
+## Variable sharing and managing experiments
+
