--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -268,3 +268,30 @@ Gradients
   
 ## Variable sharing and managing experiments
 
+Word Embedding
+
+1. CBOW: use neighbors to predict center
+2. Skip-Gram: use center to predict neighbors
+
+Structure TensorFlow model
+
+    class SkipGramModel:
+        """ Build the graph for word2vec model """
+        def __init__(self, params):
+            pass
+
+        def _import_data(self):
+            """ Step 1: import data """
+            pass
+
+        def _create_embedding(self):
+            """ Step 2: define weights. In word2vec, it's actually the weights that we care about """
+            pass
+
+        def _create_loss(self):
+            """ Step 3 + 4: define the inference + the loss function """
+            pass
+
+        def _create_optimizer(self):
+            """ Step 5: define optimizer """
+            pass
