--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -295,3 +295,101 @@ Structure TensorFlow model
         def _create_optimizer(self):
             """ Step 5: define optimizer """
             pass
+
+Name scope (TensorFlow doesn't know what nodes should be grouped together, unless you tell it to)
+
+    with tf.name_scope(name_of_that_scope):
+	    # declare op_1
+	    # declare op_2
+	    # ...
+	    
+Variable scope
+
+    tf.get_variable(<name>, <shape>, <initializer>)
+
+    If a variable with <name> already exists, reuse it
+    If not, initialize it with <shape> using <initializer>
+
+    ##########
+
+    def fully_connected(x, output_dim, scope):
+        with tf.variable_scope(scope, reuse=tf.AUTO_REUSE) as scope:
+            w = tf.get_variable("weights", [x.shape[1], output_dim], initializer=tf.random_normal_initializer())
+            b = tf.get_variable("biases", [output_dim], initializer=tf.constant_initializer(0.0))
+            return tf.matmul(x, w) + b
+
+    def two_hidden_layers(x):
+        h1 = fully_connected(x, 50, 'h1')
+        h2 = fully_connected(h1, 10, 'h2')
+
+    with tf.variable_scope('two_layers') as scope:
+        logits1 = two_hidden_layers(x1)
+        logits2 = two_hidden_layers(x2)
+
+tf.train.Saver
+
+1. Only save variables, not graph
+2. Checkpoints map variable names to tensors
+
+tf.summary
+
+    tf.summary.scalar("loss", self.loss)
+    tf.summary.histogram("histogram loss", self.loss)
+    summary_op = tf.summary.merge_all()
+
+    saver = tf.train.Saver() # defaults to saving all variables
+
+    with tf.Session() as sess:
+        sess.run(tf.global_variables_initializer())
+        ckpt = tf.train.get_checkpoint_state(os.path.dirname('checkpoints/checkpoint'))
+        if ckpt and ckpt.model_checkpoint_path:
+            saver.restore(sess, ckpt.model_checkpoint_path)
+
+        writer = tf.summary.FileWriter('./graphs', sess.graph)
+        for index in range(10000):
+            ...
+            loss_batch, _, summary = sess.run([loss, optimizer, summary_op])
+            writer.add_summary(summary, global_step=index)
+
+            if (index + 1) % 1000 == 0:
+                saver.save(sess, 'checkpoints/skip-gram', index)
+                
+Control randomization
+
+    tf.reset_default_graph()
+    tf.set_random_seed(2)
+    c = tf.random_uniform([], -10, 10)
+    d = tf.random_uniform([], -10, 10)
+
+    with tf.Session() as sess:
+        print(sess.run(c)) >> -4.007516
+        print(sess.run(d)) >> -2.9833937
+    
+    with tf.Session() as sess:
+        print(sess.run(c)) >> -4.007516
+        print(sess.run(d)) >> -2.9833937
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
